Контрольная-7 3-этап добавил вывод опроса вывод добавления

--- a/source/webapp/templates/choice/delete.html
+++ b/source/webapp/templates/choice/delete.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Delete poll{% endblock %}
+{% block menu %}
+    <li><a href="{% url 'poll_view' choice.poll.pk %}">View</a></li>
+{% endblock %}
+{% block content %}
+    <h1>Are you sure want to delete poll"{{ choice }}"?</h1>
+    <form method="POST" action="{% url "choice_delete" choice.pk %}" class="text-center">
+        {% csrf_token %}
+        <p><input type="submit" value="Confirm" class="btn btn-danger"></p>
+        <p><a href="{% url 'poll_view' choice.poll.pk %}" class="btn btn-default">Cancel</a></p>
+    </form>
+{% endblock %}
