--- a/source/webapp/templates/choice/create.html
+++ b/source/webapp/templates/choice/create.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Create Choice{% endblock %}
+{% block content %}
+    <h1>Create poll</h1>
+    <form method="POST" action="">
+        {% include 'partial/article_form.html' with button_text='Create' %}
+    </form>
+{% endblock %}
