--- a/source/webapp/templates/choice/update.html
+++ b/source/webapp/templates/choice/update.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Update choice{% endblock %}
+{% block menu %}
+    <li><a href="{% url 'poll_view' choice.poll.pk %}">View</a></li>
+{% endblock %}
+{% block content %}
+    <h1>Update choice</h1>
+    <form method="POST" action="{% url "choice_update" choice.pk %}">
+        {% include 'partial/article_form.html' with button_text="Update" %}
+    </form>
+{% endblock %}
