--- a/source/webapp/templates/poll/create.html
+++ b/source/webapp/templates/poll/create.html
@@ -2,7 +2,7 @@
 {% block title %}Create Poll{% endblock %}
 {% block content %}
     <h1>Create poll</h1>
-    <form method="POST" action="{% url "poll_add" %}">
+    <form method="POST" action="{% url "choice_add" poll.pk %}">
         {% include 'partial/article_form.html' with button_text='Create' %}
     </form>
 {% endblock %}
