--- a/source/webapp/templates/poll/delete.html
+++ b/source/webapp/templates/poll/delete.html
@@ -4,7 +4,7 @@
     <li><a href="{% url 'poll_view' poll.pk %}">View</a></li>
 {% endblock %}
 {% block content %}
-    <h1>Are you sure want to delete task "{{ poll }}"?</h1>
+    <h1>Are you sure want to delete poll"{{ poll }}"?</h1>
     <form method="POST" action="{% url "poll_delete" poll.pk %}" class="text-center">
         {% csrf_token %}
         <p><input type="submit" value="Confirm" class="btn btn-danger"></p>
