--- a/source/webapp/templates/poll/index.html
+++ b/source/webapp/templates/poll/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block menu %}
-    <li><a href="{% url 'poll_add' %}">add poll</a> </a></li>
+    <li><a href="{% url 'poll_add'   %}">Add poll</a></li>
 {% endblock %}
 {% block content %}
 {#        {% include 'partial/simple_search.html' %}#}
